components/ollama/001-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  finalizers:
  - kubernetes
