components/ollama/006-service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  annotations:
    argocd.argoproj.io/sync-wave: "6"
  labels:
    app: ollama
spec:
  selector:
    app: ollama
  ports:
  - name: http
    port: 11434
    targetPort: http
    protocol: TCP
  type: ClusterIP
