components/ollama/006-service-open-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  annotations:
    argocd.argoproj.io/sync-wave: "6"
  labels:
    app: open-webui
spec:
  selector:
    app: open-webui
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  type: ClusterIP
