components/ollama/007-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-webui
  annotations:
    argocd.argoproj.io/sync-wave: "7"
  labels:
    app: open-webui
spec:
  host: open-webui-ollama.apps.sno.shanehomelab.com
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: open-webui
    weight: 100
  wildcardPolicy: None
